# smart-mirror-backend

./: .gitignore  Makefile  README.md  SETUP_SERVER.md  deploy.sh  env.example  pyproject.toml  smartmirror.service  test_api_manual.py  test_mvp.py  ТЗ.md
.github/workflows/: deploy.yml
app/: main.py
app/api/endpoints/: llm.py  music.py
app/api/middleware/: rate_limit.py
app/core/: config.py
app/schemas/: llm.py  music.py
app/services/llm/: deepseek.py
app/services/music/: yandex.py
tests/: conftest.py  test_example.py
